# boinc-shmem-tool

./: README.md  meson.build
src/: Makefile.am  main.cpp
